# tfomics

./: .gitignore  README.md  pyproject.toml
pip-wheel-metadata/tfomics-0.1.0.dist-info/: METADATA
pip-wheel-metadata/tfomics-0.2.0.dist-info/: METADATA
tests/: test_dinucleotide_shuffle.py  test_mendelian_randomisation.py  test_statistics.py
tfomics/: __init__.py  dinucleotide_shuffle.py  mendelian_randomisation.py  statistics.py
tfomics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tfomics/data_structures/: allele_seq.py  reference_genome.py
tfonics/: dinucleotide_shuffle.py
tfonics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
