[tool.poetry]
name = "tfomics"
version = "0.2.0"
description = "A collection of functions and utilities for the tfomics project"
authors = ["Øyvind Almelid <oyvind.almelid@igmm.ed.ac.uk>"]
readme = "README.md"
repository = "https://git.ecdf.ed.ac.uk/oalmelid/tfomics"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
pandas = "^0.25.2"
pysam = "^0.15.3"
scipy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"
pylint = "^2.3"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
