[tool.poetry]
name = "tfomics"
version = "0.2.0"
description = "A collection of functions and utilities for the tfomics project"
authors = ["Øyvind Almelid <oyvind.almelid@igmm.ed.ac.uk>"]
readme = "README.md"
repository = "https://git.ecdf.ed.ac.uk/oalmelid/tfomics"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
numpy = "^1.17"
pandas = "^0.25.2"
pysam = "^0.15.3"
scipy = "^1.3"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
pytest-cov = "^2.6"
mypy = "^0.812"
flake8 = "^3.9.1"
black = "^21.4b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
